--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>        
     </section>
     <section class="link-instagram">
-        <a href="#" >Ir a Instagram</a>
+        <a href="https://www.instagram.com/ecos.art/" >Ir a Instagram</a>
     </section>
     <section class="content_1">
         
